# voxtral-mini-realtime-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  playwright.config.ts  serve.mjs
.github/workflows/: ci.yml
benches/: audio.rs  q4_ops.rs  q4_pipeline.rs
docs/: CONTINUATION.md  QUANTIZATION.md  RALPH_PROMPT.md  VALIDATION.md  VOXTRAL_ARCHITECTURE.md
scripts/: analyze_hidden.py  build-wasm.sh  check_embeddings.py  check_special_tokens.py  compare_full_forward.py  compare_mel_filterbank.py  compare_tensors.py  download_model.py  dump_weight_names.py  eval_wer.py  generate_padded_reference.py  inspect_weights.py  reference_forward.py  reference_inference.py  serve.py  test_autoregressive.py  test_encoder_layer.py  test_mistral_common_inference.py  test_proper_inference.py  test_vllm_inference.py  test_wasm_e2e.py  test_webgpu_e2e.py  verify_lm_head.py  verify_weights.py
space/: README.md  index.html  voxtral-client.js  worker.js
space/pkg/: voxtral_mini_realtime.d.ts  voxtral_mini_realtime.js  voxtral_mini_realtime_bg.wasm.d.ts
src/: hub.rs  lib.rs  main.rs  profiling.rs  test_utils.rs
src/audio/: io.rs  mel.rs  mod.rs  pad.rs
src/gguf/: model.rs  op.rs  reader.rs  shader.wgsl  tests.rs
src/models/: config.rs  decoder.rs  encoder.rs  loader.rs  mod.rs  sharding.rs  voxtral.rs  weights.rs
src/models/layers/: attention.rs  decoder_layer.rs  kv_cache.rs  masking.rs  mod.rs  rms_norm.rs
src/quantization/: mod.rs
src/tokenizer/: mod.rs
src/web/: bindings.rs  bindings_wgpu.rs  mod.rs
tests/: e2e_browser.spec.ts  gguf_integration.rs
web/: index.html  voxtral-client.js  worker.js
